# ferramentas_avancadas

./: .gitignore  Intro.ipynb  Pandas.ipynb  instructions.txt  main.py  pyproject.toml
1 - Classification & Regression/: Classification.ipynb  Regression.ipynb
2 - LSTM/: HistoricalData.csv  LSTM.ipynb
3 - CNN/: AutoEncoder.ipynb  CNN.ipynb  GAN.ipynb
4 - NLP/: GPT2.ipynb  Sentiment_Analysis.ipynb
5 - Evolutionary/: MonaLisa.ipynb  Wordle.ipynb
Projeto/: sample-submission-better-version.ipynb  sample-submission.ipynb
